--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tocelldb
 Title: Customize your specific organism cellchatdb
-Version: 1.0.0
+Version: 1.0.1
 Authors@R: 
     person("Dave", "Hall", , "halldave1996@gmail.com", role = c("aut", "cre"))
 Description: While you might feel confused when you have no idea about dealing with cell communication analysis, it is because you do not possess a specific cellchat database of your own organism. Normally, this can only be done in humans or mice, or by matching homologous genes in your species. Now we provide a method that utilizes STRINGdb to predict interactions of your specific species as long as it has a reference genome. Alternatively, if you input a DGE list, we could assist you in predicting interactions and determining the reasons behind differential gene expression!
@@ -13,3 +13,6 @@ Imports:
     dplyr,
     rtracklayer,
     utils
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
